# sandbox

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  reset.sh
doc/html/: annotated.html  chromaaberration_8cpp.html  chromaaberration_8h.html  chromaaberration_8h_source.html  class_abstract_algorithm-members.html  class_abstract_algorithm.html  class_concrete_algorithm-members.html  class_concrete_algorithm.html  classes.html  classsandbox_1_1_options-members.html  classsandbox_1_1_options.html  classsandbox_1_1_time_type-members.html  classsandbox_1_1_time_type.html  classsandbox_1_1_variant-members.html  classsandbox_1_1_variant.html  classsandbox_1_1pattern_1_1_draw_tool-members.html  classsandbox_1_1pattern_1_1_draw_tool.html  classsandbox_1_1pattern_1_1_singleton-members.html  classsandbox_1_1pattern_1_1_singleton.html  classsandbox_1_1pattern_1_1_state_select-members.html  classsandbox_1_1pattern_1_1_state_select.html  classsandbox_1_1pattern_1_1_tool-members.html  classsandbox_1_1pattern_1_1_tool.html  classsandbox_1_1pattern_1_1_tool_controller-members.html  classsandbox_1_1pattern_1_1_tool_controller.html  dir_3a581ba30d25676e4b797b1f96d53b45.html  dir_43feb317d5f4602edf7db5e0338a9b63.html  dir_67a0d47e69934d1420ac9a1aa256b258.html  dir_c4a6d00bdc510136fbd964986dc2264a.html  dir_d7277ec1937ed12f574d4b4a72771a6d.html  dir_fd3dad08317bc51adb6e302a70fba21e.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  (+26 more)
doc/html/search/: all_61.js  all_63.js  all_64.js  all_65.js  all_69.js  all_6d.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_76.js  classes_63.js  classes_64.js  classes_6f.js  classes_73.js  classes_74.js  classes_76.js  defines_69.js  defines_70.js  files_63.js  files_73.js  files_74.js  files_76.js  functions_63.js  functions_64.js  functions_67.js  functions_69.js  functions_6d.js  functions_6f.js  functions_70.js  functions_71.js  functions_73.js  functions_74.js  functions_76.js  namespaces_73.js  related_6f.js  related_74.js  search.js  (+1 more)
doc/latex/: annotated.tex  chromaaberration_8cpp.tex  chromaaberration_8h.tex  class_abstract_algorithm.eps  class_abstract_algorithm.tex  class_concrete_algorithm.eps  class_concrete_algorithm.tex  classsandbox_1_1_options.tex  classsandbox_1_1_time_type.tex  classsandbox_1_1_variant.tex  classsandbox_1_1pattern_1_1_draw_tool.eps  classsandbox_1_1pattern_1_1_draw_tool.tex  classsandbox_1_1pattern_1_1_singleton.tex  classsandbox_1_1pattern_1_1_state_select.eps  classsandbox_1_1pattern_1_1_state_select.tex  classsandbox_1_1pattern_1_1_tool.eps  classsandbox_1_1pattern_1_1_tool.tex  classsandbox_1_1pattern_1_1_tool_controller.tex  dir_3a581ba30d25676e4b797b1f96d53b45.tex  dir_43feb317d5f4602edf7db5e0338a9b63.tex  dir_67a0d47e69934d1420ac9a1aa256b258.tex  dir_c4a6d00bdc510136fbd964986dc2264a.tex  dir_d7277ec1937ed12f574d4b4a72771a6d.tex  dir_fd3dad08317bc51adb6e302a70fba21e.tex  files.tex  hierarchy.tex  main_8cpp.tex  namespaces.tex  namespacesandbox.tex  namespacesandbox_1_1pattern.tex  options_8h.tex  quicksort_8h.tex  refman.tex  shed_8h.tex  singleton_8h.tex  state_8h.tex  strategy_8h.tex  template_method_8h.tex  timetype_8cpp.tex  timetype_8h.tex  (+1 more)
doc/man/man3/: AbstractAlgorithm.3  ConcreteAlgorithm.3  F__.3  F__Projects_.3  F__Projects_sandbox_.3  F__Projects_sandbox_src_.3  F__Projects_sandbox_src_boost_.3  F__Projects_sandbox_src_pattern_.3  chromaaberration.cpp.3  chromaaberration.h.3  main.cpp.3  options.h.3  quicksort.h.3  sandbox.3  sandbox_Options.3  sandbox_TimeType.3  sandbox_Variant.3  sandbox_pattern.3  sandbox_pattern_DrawTool.3  sandbox_pattern_Singleton.3  sandbox_pattern_StateSelect.3  sandbox_pattern_Tool.3  sandbox_pattern_ToolController.3  shed.h.3  singleton.h.3  state.h.3  strategy.h.3  templateMethod.h.3  timetype.cpp.3  timetype.h.3  variant.h.3
src/: main.cpp  options.h  quicksort.h  shed.h  timetype.cpp  timetype.h  variant.h
src/boost/: chromaaberration.cpp  chromaaberration.h
src/pattern/: singleton.h  state.h  strategy.h  templateMethod.h
test/: shed_palindrome_test.cpp  shed_swap_test.cpp  timetype_test.cpp
